[package]
name = "crypto-http-protcols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
h3 = "0.0.4"
http = "1"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
h3-quinn = "0.0.5"
quinn = { version = "0.10", default-features = false, features = ["runtime-tokio", "tls-rustls", "ring"] }
dashmap = "5.5.3"
futures = "0.3.30"

dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"